# pdf-unlock

./: .gitignore  README.md  main.py  pyproject.toml
electron-app/: main.js  package.json  preload.js
electron-app/renderer/: index.html  renderer.js
tauri-app/: .gitignore  index.html  package.json
tauri-app/src/: main.js  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs
