[package]
name = "pdf-unlock"
version = "1.0.0"
description = "Unlock password-protected PDFs"
authors = ["you"]
edition = "2021"

[lib]
name = "pdf_unlock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
